--- a/WPF/Android/Views/AccommodationGuidancePage.xaml
+++ b/WPF/Android/Views/AccommodationGuidancePage.xaml
@@ -33,7 +33,7 @@
         <Style TargetType="Label" x:Key="Header">
             <Style.Setters>
                 <Setter Property="FontSize" Value="22"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="BorderBrush" Value="{StaticResource Beige}"/>
                 <Setter Property="BorderThickness" Value="0,0,0,2"/>
             </Style.Setters>
@@ -41,16 +41,17 @@
 
         <Style TargetType="Label" x:Key="ButtonLabel">
             <Style.Setters>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+                <Setter Property="FontWeight" Value="Medium"></Setter>
             </Style.Setters>
         </Style>
 
         <Style TargetType="TextBlock" x:Key="ButtonLabelTextBlock">
             <Style.Setters>
                 <Setter Property="FontSize" Value="16"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="Foreground" Value="{StaticResource Beige}"/>
             </Style.Setters>
         </Style>
@@ -72,7 +73,7 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Label Content="Hottest locations: " Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"
-                            Style="{StaticResource Header}"/>
+                            Style="{StaticResource Header}" BorderBrush="{StaticResource HardGreen}" BorderThickness="0,0,0,2" Padding="0"/>
 
                     <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="1"  Grid.Column="0" Grid.Row="1" 
                             VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0">
@@ -92,7 +93,7 @@
                         </StackPanel>
                     </Border>
 
-                    <Button x:Name="FirstLocationButton" Grid.Row="1" Grid.Column="1" Height="60" Width="130" Style="{StaticResource DisabledButtonStyle}" HorizontalAlignment="Center"
+                    <Button x:Name="FirstLocationButton" Grid.Row="1" Grid.Column="1" Height="60" Width="140" Style="{StaticResource DisabledButtonStyle}" HorizontalAlignment="Center"
                             VerticalAlignment="Center" Click="FirstLocationButton_Click">
                         <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                             <Image Source="{StaticResource AddIcon}" Height="30" Width="30"/>
@@ -100,7 +101,7 @@
                         </StackPanel>
                     </Button>
 
-                    <Button x:Name="SecondLocationButton" Grid.Row="2" Grid.Column="1" Height="60" Width="130" Style="{StaticResource DisabledButtonStyle}"
+                    <Button x:Name="SecondLocationButton" Grid.Row="2" Grid.Column="1" Height="60" Width="140" Style="{StaticResource DisabledButtonStyle}"
                             Click="SecondLocationButton_Click">
                         <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                             <Image Source="{StaticResource AddIcon}" Height="30" Width="30"/>
@@ -122,7 +123,7 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Label Content="Least popular locations: " Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"
-                Style="{StaticResource Header}"/>
+                Style="{StaticResource Header}" BorderBrush="{StaticResource HardGreen}" BorderThickness="0,0,0,2" Padding="0"/>
 
                     <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="1" 
                             Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,0,0">
@@ -143,7 +144,7 @@
                     </Border>
 
 
-                    <Button x:Name="CloseAccomodationButton" Grid.Row="1" Grid.Column="1" Height="70" Width="130" Style="{StaticResource DisabledButtonStyle}" VerticalAlignment="Top"
+                    <Button x:Name="CloseAccomodationButton" Grid.Row="1" Grid.Column="1" Height="70" Width="140" Style="{StaticResource DisabledButtonStyle}" VerticalAlignment="Top"
                             Margin="0,10,0,0" Command="{Binding CloseCommand}" Click="CloseAccomodationButton_Click">
                         <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                             <Image Source="{StaticResource LockedIcon}" Height="30" Width="30"/>
