--- a/WPF/Android/Views/AddAccomodationPage.xaml
+++ b/WPF/Android/Views/AddAccomodationPage.xaml
@@ -39,7 +39,7 @@
         <Style TargetType="Label" x:Key="Header">
             <Style.Setters>
                 <Setter Property="FontSize" Value="22"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="BorderBrush" Value="{StaticResource Beige}"/>
                 <Setter Property="BorderThickness" Value="0,0,0,2"/>
             </Style.Setters>
@@ -47,16 +47,17 @@
 
         <Style TargetType="Label" x:Key="ButtonLabel">
             <Style.Setters>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+                <Setter Property="FontWeight" Value="Medium"></Setter>
             </Style.Setters>
         </Style>
 
         <Style TargetType="TextBlock" x:Key="ButtonLabelTextBlock">
             <Style.Setters>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="Foreground" Value="{StaticResource Beige}"/>
             </Style.Setters>
         </Style>
@@ -84,8 +85,10 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" Grid.ColumnSpan="2" HorizontalAlignment="Left" Content="New Accomodation:" Style="{StaticResource Header}"/>
 
-            <Label Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Name:" FontSize="16"/>
-            <TextBox x:Name="nameTextbox" Grid.Row="1" Grid.Column="1" Width="250" Grid.ColumnSpan="2" HorizontalAlignment="Right" Height="40">
+            <Label Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Name:" FontFamily="{StaticResource Roboto}"
+                     FontSize="18"/>
+            <TextBox x:Name="nameTextbox" Grid.Row="1" Grid.Column="1" Width="250" Grid.ColumnSpan="2" HorizontalAlignment="Right" Height="40" FontFamily="{StaticResource Roboto}"
+                     FontSize="16">
                 <TextBox.Text>
                     <Binding Path="AccommodationDTO.Name" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay"
                              ValidatesOnDataErrors="True"
@@ -105,13 +108,15 @@
                 </Validation.ErrorTemplate>
             </TextBox>
 
-                <Label Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Location:" FontSize="16"/>
+            <Label Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Location:" FontFamily="{StaticResource Roboto}"
+                     FontSize="18" Margin="0,0,0,5"/>
 
-            <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center">
+            <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Grid.ColumnSpan="2" Width="220" HorizontalAlignment="Right">
                 <ComboBox x:Name="comboBox"  Height="40" Text="Choose location" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                       SelectedItem="{Binding SelectedLocationDTO, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" ItemsSource="{Binding LocationDTOs}"
-                      DisplayMemberPath="LocationOptionTemplate" Background="{StaticResource Green}" IsEditable="True" IsTextSearchEnabled="True" IsTextSearchCaseSensitive="False"/>
-                <Label Foreground="Red" Padding="0">
+                      DisplayMemberPath="LocationOptionTemplate" Background="{StaticResource Green}" IsEditable="True" IsTextSearchEnabled="True" IsTextSearchCaseSensitive="False"
+                          FontFamily="{StaticResource Roboto}" FontSize="16"/>
+                <Label Foreground="Red" Padding="0" FontFamily="{StaticResource Roboto}">
                     <Label.Style>
                         <Style TargetType="Label">
                             <Style.Triggers>
@@ -124,52 +129,65 @@
                 </Label>
             </StackPanel>
 
-            <Label Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Type:" FontSize="16"/>
+            <Label Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Type:" FontFamily="{StaticResource Roboto}" FontSize="18"/>
             <StackPanel Orientation="Vertical" Grid.Row="6" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" >
-                <RadioButton x:Name="radioButtonApartment" FontSize="16" Content="Apartment" GroupName="AccomodationType" 
+                <RadioButton x:Name="radioButtonApartment" Content="Apartment" GroupName="AccomodationType" FontFamily="{StaticResource Roboto}" FontSize="16"
                              IsChecked="{Binding AccommodationDTO.Type, Converter={StaticResource AccTypeConverter}, ConverterParameter=apartment}"/>
-                <RadioButton x:Name="radioButtonHouse" FontSize="16" Content="House" GroupName="AccomodationType" 
+                <RadioButton x:Name="radioButtonHouse" Content="House" GroupName="AccomodationType" FontFamily="{StaticResource Roboto}" FontSize="16"
                              IsChecked="{Binding AccommodationDTO.Type, Converter={StaticResource AccTypeConverter}, ConverterParameter=house}"/>
-                <RadioButton x:Name="radioButtonHut" FontSize="16" Content="Hut" GroupName="AccomodationType"
+                <RadioButton x:Name="radioButtonHut" Content="Hut" GroupName="AccomodationType" FontFamily="{StaticResource Roboto}" FontSize="16"
                              IsChecked="{Binding AccommodationDTO.Type, Converter={StaticResource AccTypeConverter}, ConverterParameter=hut}"/>
             </StackPanel>
 
-            <Label Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Max No of Guests:" FontSize="16"/>
+            <Label Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Max No of Guests:" FontFamily="{StaticResource Roboto}" FontSize="18"/>
             <xctk:IntegerUpDown Grid.Row="3" Grid.Column="1" Width="70" Grid.ColumnSpan="2" HorizontalAlignment="Right" Height="40"
-                                Value="{Binding AccommodationDTO.MaxGuestNumber}" Minimum="1" ClipValueToMinMax="True" TextAlignment="Left"/>
+                                Value="{Binding AccommodationDTO.MaxGuestNumber}" Minimum="1" ClipValueToMinMax="True" TextAlignment="Left"
+                                FontFamily="{StaticResource Roboto}" FontSize="16"/>
 
-            <Label Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Min Reservation Days:" FontSize="16"/>
+            <Label Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Min Reservation Days:" FontFamily="{StaticResource Roboto}" FontSize="18"/>
             <xctk:IntegerUpDown Grid.Row="4" Grid.Column="1" Width="70" Grid.ColumnSpan="2" HorizontalAlignment="Right" Height="40"
-                     Text="{Binding AccommodationDTO.MinReservationDays}" Minimum="1" ClipValueToMinMax="True" TextAlignment="Left"/>
+                     Text="{Binding AccommodationDTO.MinReservationDays}" Minimum="1" ClipValueToMinMax="True" TextAlignment="Left" 
+                                FontFamily="{StaticResource Roboto}" FontSize="16"/>
 
-            <Label Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Last Cancellation Day:" FontSize="16"/>
+            <Label Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Content="Last Cancellation Day:" FontFamily="{StaticResource Roboto}" FontSize="18"/>
             <xctk:IntegerUpDown Grid.Row="5" Grid.Column="1" Width="70" Grid.ColumnSpan="2" HorizontalAlignment="Right" Height="40"
-                     Text="{Binding AccommodationDTO.LastCancellationDay}" Minimum="1" ClipValueToMinMax="True" TextAlignment="Left"/>
+                     Text="{Binding AccommodationDTO.LastCancellationDay}" Minimum="1" ClipValueToMinMax="True" TextAlignment="Left"
+                                FontFamily="{StaticResource Roboto}" FontSize="16"/>
 
-            <Button x:Name="ImportButton" Grid.Column="1"  HorizontalAlignment="Center" Grid.Row="7" Height="50" Width="150" Click="SelectImages_Click" Style="{StaticResource DisabledButtonStyle}">
+            <Button x:Name="ImportButton" Grid.Column="1"  HorizontalAlignment="Left" Margin="5,0,0,10" VerticalAlignment="Center"
+                    Grid.Row="7" Height="60" Width="150" Click="SelectImages_Click" Style="{StaticResource DisabledButtonStyle}">
                 <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                     <Image Source="{StaticResource ImagesIcon}" Height="30" Width="30"/>
-                    <Label Content="Import images" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
+                    <StackPanel VerticalAlignment="Center" Margin="10,0,0,0">
+                        <Label Content="Import" Padding="0"  Style="{StaticResource ButtonLabel}"/>
+                        <Label Content="images" Padding="0" Style="{StaticResource ButtonLabel}"/>
+                    </StackPanel>
                 </StackPanel>
             </Button>
 
-            <Label x:Name="importLabel" Content="" Grid.Row="7" Grid.Column="2" Foreground="red" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-            <Button x:Name="ViewButton" Style="{StaticResource DisabledButtonStyle}" Grid.Column="2" HorizontalAlignment="Center"
-                    Grid.Row="7" Height="50" Width="150" Click="ViewImages_Click">
+            <Button x:Name="ViewButton" Style="{StaticResource DisabledButtonStyle}" Grid.Column="2" HorizontalAlignment="Right" Margin="5,0,0,10"
+                    Grid.Row="7" Height="60" Width="150" Click="ViewImages_Click" VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                     <Image Source="{StaticResource EyeIconBeige}" Height="30" Width="30"/>
-                    <Label Content="View images" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
+                    <StackPanel VerticalAlignment="Center" Margin="10,0,0,0">
+                        <Label Content="View" Padding="0"  Style="{StaticResource ButtonLabel}"/>
+                        <Label Content="images" Padding="0" Style="{StaticResource ButtonLabel}"/>
+                    </StackPanel>
                 </StackPanel>
             </Button>
+            <Label x:Name="importLabel" Content="" Grid.Row="7" Grid.Column="2" Foreground="red" HorizontalAlignment="Center" VerticalAlignment="Bottom"
+                   Margin="0,0,0,5"/>
 
-            <Button Grid.Row="9" Grid.Column="1" Height="50" Width="130" Click="Decline_Click" Style="{StaticResource DisabledButtonStyle}">
+            <Button Grid.Row="9" Grid.Column="1" Height="50" Width="130" Click="Decline_Click" Style="{StaticResource DisabledButtonStyle}"
+                    HorizontalAlignment="Left" Margin="5,0,0,25" VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                     <Image Source="{StaticResource CancelIconBeige}" Height="30" Width="30"/>
                     <Label Content="Cancel" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
                 </StackPanel>
             </Button>
 
-            <Button x:Name="ConfirmButton" Grid.Row="9" Grid.Column="2" Height="50" Width="130" Click="Confirm_Click">
+            <Button x:Name="ConfirmButton" Grid.Row="9" Grid.Column="2" Height="50" Width="130" Click="Confirm_Click" 
+                    HorizontalAlignment="Right" Margin="0,0,5,25" VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                     <Image Source="{StaticResource ConfirmIconBeige}" Height="30" Width="30"/>
                     <Label Content="Confirm" VerticalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
