--- a/WPF/Android/Views/AndroidDialogWindow.xaml
+++ b/WPF/Android/Views/AndroidDialogWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookingApp.WPF.Android.Views"
         mc:Ignorable="d"
-        Title="Alert" Height="200" Width="300"
+        Title="Alert" Height="180" Width="250"
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <BitmapImage x:Key="AlertIcon" UriSource="../../../Resources/Images/Icons/android-alert.png"/>
         <Style TargetType="TextBlock" x:Key="ButtonLabelTextBlock">
             <Style.Setters>
                 <Setter Property="FontSize" Value="14"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
             </Style.Setters>
         </Style>
     </Window.Resources>
@@ -22,13 +22,13 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="80"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Image Grid.Column="0" Grid.Row="0" Height="50" Width="50" Source="{StaticResource AlertIcon}"/>
-        <TextBlock Text="{Binding Text}" Width="200" TextWrapping="Wrap" Grid.Column="1" Style="{StaticResource ButtonLabelTextBlock}"
+        <Image Grid.Column="0" Grid.Row="0" Height="50" Width="50" Source="{StaticResource AlertIcon}" RenderOptions.BitmapScalingMode="HighQuality" Margin="5,0"/>
+        <TextBlock Text="{Binding Text}" Width="170" TextWrapping="Wrap" Grid.Column="1" Style="{StaticResource ButtonLabelTextBlock}"
                    VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0"/>
-        <Button Content="OK" FontSize="16" Foreground="{StaticResource Beige}" Background="{StaticResource Green}" Click="Button_Click"
-                Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Height="50" Width="100" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+        <Button Content="OK" FontSize="16" FontFamily="{StaticResource Roboto}" FontWeight="Medium" Foreground="{StaticResource Beige}" Background="{StaticResource Green}" Click="Button_Click"
+                Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Height="50" Width="90" VerticalAlignment="Top" HorizontalAlignment="Center"/>
     </Grid>
 </Window>
