--- a/WPF/Android/Views/FilterForumsWindow.xaml
+++ b/WPF/Android/Views/FilterForumsWindow.xaml
@@ -11,7 +11,7 @@
         <Style TargetType="Label" x:Key="Header">
             <Style.Setters>
                 <Setter Property="FontSize" Value="22"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="BorderBrush" Value="{StaticResource Beige}"/>
                 <Setter Property="BorderThickness" Value="0,0,0,2"/>
                 <Setter Property="Background" Value="{StaticResource Green}"/>
@@ -21,7 +21,7 @@
 
         <Style TargetType="Label" x:Key="ButtonLabel">
             <Style.Setters>
-                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontSize" Value="18"/>
                 <Setter Property="FontFamily" Value="Global Sans Serif"/>
                 <Setter Property="Foreground" Value="{StaticResource Beige}"/>
             </Style.Setters>
@@ -29,9 +29,10 @@
 
         <Style TargetType="TextBlock" x:Key="ButtonLabelTextBlock">
             <Style.Setters>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+                <Setter Property="FontWeight" Value="Medium"/>
             </Style.Setters>
         </Style>
 
@@ -68,17 +69,17 @@
         <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
             <Image Source="{StaticResource LocationIcon}" Width="30" Height="30"/>
             <ComboBox ItemsSource="{Binding LocationDTOs}" DisplayMemberPath="LocationOptionTemplate" SelectedItem="{Binding SelectedLocation, Mode=TwoWay}"
-                      Text="Locations" Margin="10,0,0,0" Width="150" Background="{StaticResource SoftGreen}" FontSize="14" FontFamily="Global sans serif"/>
+                      Text="Locations" Margin="10,0,0,0" Width="150" Background="{StaticResource SoftGreen}" FontSize="16" FontFamily="{StaticResource Roboto}"/>
         </StackPanel>
 
         <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
             <Image Source="{StaticResource PeopleIcon}" Width="30" Height="30"/>
             <ComboBox ItemsSource="{Binding Users}" DisplayMemberPath="Username" SelectedItem="{Binding SelectedUser, Mode=TwoWay}" 
-                      Margin="10,0,0,0" Width="150" Background="{StaticResource SoftGreen}" FontSize="14" FontFamily="Global sans serif"/>
+                      Margin="10,0,0,0" Width="150" Background="{StaticResource SoftGreen}" FontSize="16" FontFamily="{StaticResource Roboto}"/>
         </StackPanel>
 
         <CheckBox IsChecked="{Binding ShowUsefull}" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalContentAlignment="Center">
-            <TextBlock Text="Show only usefull forums" FontSize="18" FontFamily="Global sans serif"/>
+            <TextBlock Text="Show only usefull forums" FontSize="18" FontFamily="{StaticResource Roboto}"/>
         </CheckBox>
 
         <Button Style="{StaticResource DisabledButtonStyle}" Height="50" Width="130" Grid.Row="4" VerticalAlignment="Center" Click="Button_Click">
