--- a/WPF/Android/Views/ForumCommentCard.xaml
+++ b/WPF/Android/Views/ForumCommentCard.xaml
@@ -30,8 +30,8 @@
             <Border Background="{StaticResource Beige}" BorderBrush="Black" BorderThickness="1" Width="300">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="80"/>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="3*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -52,8 +52,8 @@
                                 </Style>
                             </Image.Style>
                         </Image>
-                        <Label Content="{Binding CommentDTO.Username}" FontFamily="Global sans serif" FontSize="12" Padding="0" HorizontalAlignment="Center"/>
-                        <Label FontFamily="Global sans serif" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="0" Margin="2">
+                        <Label Content="{Binding CommentDTO.Username}" FontFamily="{StaticResource Roboto}" FontSize="14" Padding="0" HorizontalAlignment="Center"/>
+                        <Label FontFamily="{StaticResource Roboto}" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="0" Margin="0,0,0,2">
                             <Label.Style>
                                 <Style TargetType="Label">
                                     <Setter Property="Content" Value="(guest)" />
@@ -67,12 +67,12 @@
                         </Label>
                     </StackPanel>
 
-                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding CommentDTO.Text}" FontFamily="Global sans serif" Margin="5" TextWrapping="Wrap" Height="50"/>
+                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding CommentDTO.Text}" FontFamily="{StaticResource Roboto}" Margin="5" TextWrapping="Wrap" Height="50"/>
                     <Border BorderBrush="{StaticResource SoftGreen}" BorderThickness="0,1,0,0" Grid.Row="1" Grid.Column="1" Padding="0">
                         <Grid>
                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5,0,0,0" Width="100" HorizontalAlignment="Left">
-                                <Label Content="Reports: " FontFamily="Global sans serif" Padding="0" Margin="0"/>
-                                <Label Content="{Binding CommentDTO.ReportsNum}" Padding="0" FontFamily="Global sans serif" Margin="0"/>
+                                <Label Content="Reports: " FontFamily="{StaticResource Roboto}" Padding="0" Margin="0"/>
+                                <Label Content="{Binding CommentDTO.ReportsNum}" Padding="0" FontFamily="{StaticResource Roboto}" Margin="0"/>
                                 <StackPanel.Style>
                                     <Style TargetType="StackPanel">
                                         <Setter Property="Visibility" Value="Visible" />
@@ -86,7 +86,7 @@
                             </StackPanel>
                             
                             <Label Content="{Binding CommentDTO.CreationDateString}" Padding="0" HorizontalAlignment="Right" VerticalAlignment="Center"
-                                   FontFamily="Global sans serif" Margin="0,0,5,0"/>
+                                   FontFamily="{StaticResource Roboto}" Margin="0,0,5,0"/>
                         </Grid>
                     </Border >
                 </Grid>
@@ -95,7 +95,7 @@
             <Button x:Name="ReportButton" Height="50" Width="50" Background="Transparent" Click="ReportButton_Click" IsEnabled="{Binding ReportButtonEnabled}">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="50">
                     <Image Source="{StaticResource ReportIcon}" Width="25" Height="25"/>
-                    <TextBlock Text="Report" FontSize="14" Margin="0,5,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <TextBlock Text="Report" FontFamily="{StaticResource Roboto}" FontSize="14" Margin="0,5,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 </StackPanel>
                 <Button.Style>
                     <Style TargetType="Button">
