--- a/WPF/Android/Views/RenovationDescriptionWindow.xaml
+++ b/WPF/Android/Views/RenovationDescriptionWindow.xaml
@@ -19,9 +19,10 @@
 
         <Style TargetType="Label" x:Key="ButtonLabel">
             <Style.Setters>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+                <Setter Property="FontWeight" Value="Medium" />
             </Style.Setters>
         </Style>
 
@@ -56,9 +57,9 @@
 
     </Window.Resources>
         <Grid Background="{StaticResource Beige}">
-        <Label Content="Renovation Description" FontFamily="Global Sans Serif" FontSize="22" 
-               VerticalAlignment="Top" HorizontalAlignment="Center" Padding="5,5,5,0"
-               Style="{StaticResource Header}"/>
+        <Label Content="Renovation Description" FontFamily="{StaticResource Roboto}" FontSize="22" 
+               VerticalAlignment="Top" HorizontalAlignment="Center" Padding="0" Margin="0,10" BorderBrush="{StaticResource HardGreen}"
+               BorderThickness="0,0,0,2" Style="{StaticResource Header}"/>
         <TextBox x:Name="textBox" Text="{Binding RenovationDTO.Description}" IsEnabled="{Binding Editable}"
                  Height="150" Width="250" VerticalAlignment="Center" Margin="0,-15,0,15"/>
         <Button x:Name="ConfirmButton" Height="50" Width="120" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="15" Command="{Binding ConfirmCommand}"
