--- a/WPF/Android/Views/RescheduleRequestDeclineWindow.xaml
+++ b/WPF/Android/Views/RescheduleRequestDeclineWindow.xaml
@@ -40,9 +40,10 @@
 
         <Style TargetType="Label" x:Key="ButtonLabel">
             <Style.Setters>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+                <Setter Property="FontWeight" Value="Medium"/>
             </Style.Setters>
         </Style>
 
@@ -62,8 +63,8 @@
             <RowDefinition/>
             <RowDefinition Height="60"/>
         </Grid.RowDefinitions>
-        <Label Content="Additional info:" HorizontalAlignment="Center" VerticalAlignment="Center"  FontFamily="Global Sans Serif" FontSize="22"
-             Style="{StaticResource Header}" Padding="5,5,5,0"/>
+        <Label Content="Additional info:" HorizontalAlignment="Center" VerticalAlignment="Center"  FontFamily="{StaticResource Roboto}" FontSize="22"
+             Style="{StaticResource Header}" Padding="0" BorderBrush="{StaticResource HardGreen}"/>
         <Border Height="140" Grid.Row="1" Width="250" BorderBrush="Black" BorderThickness="1" VerticalAlignment="Top" Margin="0,10,0,0"  HorizontalAlignment="Center">
             <TextBox Text="{Binding RescheduleRequestDTO.OwnerComment}" Margin="0" Background="Transparent"/>
         </Border>
