--- a/WPF/Android/Views/ReservationReviewsPage.xaml
+++ b/WPF/Android/Views/ReservationReviewsPage.xaml
@@ -36,34 +36,34 @@
         <Style TargetType="Label" x:Key="Header">
             <Style.Setters>
                 <Setter Property="FontSize" Value="22"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="BorderBrush" Value="{StaticResource Beige}"/>
                 <Setter Property="BorderThickness" Value="0,0,0,2"/>
-                <Setter Property="Background" Value="{StaticResource Green}"/>
-                <Setter Property="Foreground" Value="{StaticResource Beige}"/>
             </Style.Setters>
         </Style>
 
         <Style TargetType="Label" x:Key="ButtonLabel">
             <Style.Setters>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+                <Setter Property="FontWeight" Value="Medium"/>
             </Style.Setters>
         </Style>
 
         <Style TargetType="TextBlock" x:Key="ButtonLabelTextBlock">
             <Style.Setters>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="FontFamily" Value="Global Sans Serif"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
                 <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+                <Setter Property="FontWeight" Value="Medium"/>
             </Style.Setters>
         </Style>
 
     </Page.Resources>
             <Grid Background="{StaticResource Beige}">
         <TabControl Height="600" Width="400" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TabItem Header="Reviews" Width="120" Height="40" FontSize="12">
+            <TabItem Header="Reviews" Width="120" Height="40" FontFamily="{StaticResource Roboto}" FontSize="16">
                 <Grid Background="#FFE5E5E5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="50"/>
@@ -76,9 +76,9 @@
                         <RowDefinition Height="90"/>
                     </Grid.RowDefinitions>
 
-                    <Label  Grid.Row="1"
+                    <Label  Grid.Row="1" FontFamily="{StaticResource Roboto}"
                             Grid.Column="0" Grid.ColumnSpan="2" Foreground="red"
-                            VerticalAlignment="Top" Margin="0,0,0,0" HorizontalAlignment="Center">
+                            VerticalAlignment="Top" Margin="0" HorizontalAlignment="Center">
                         <Label.Style>
                             <Style TargetType="Label">
                                 <Setter Property="Content" Value=""/>
@@ -100,19 +100,19 @@
                     </Label>
 
                     <Button x:Name="AssignGradeButton" Grid.Row="1"
-                            Grid.Column="0" Grid.ColumnSpan="2" Width="160" Height="50" Click="AssignGradeButton_Click" 
+                            Grid.Column="0" Grid.ColumnSpan="2" Width="170" Height="50" Click="AssignGradeButton_Click" 
                             IsEnabled="{Binding SelectedReservation.CanBeGradedByOwner}" 
                             VerticalAlignment="Bottom" Margin="0,0,0,10"
                             Style="{StaticResource DisabledButtonStyle}">
-                        <StackPanel Orientation="Horizontal"  Margin="10,0,0,0">
+                        <StackPanel Orientation="Horizontal"  Margin="5,0,0,0">
                             <Image Source="{StaticResource ReviewIconBeige}" Height="30" Width="30"/>
                             <Label Content="Assign a grade" Style="{StaticResource ButtonLabel}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                         </StackPanel>
                     </Button>
 
-                    <Label  Grid.Row="1"
+                    <Label  Grid.Row="1" FontFamily="{StaticResource Roboto}"
                     Grid.Column="2" Grid.ColumnSpan="2" Foreground="red"
-                    VerticalAlignment="Top" Margin="0,0,0,0" HorizontalAlignment="Center">
+                    VerticalAlignment="Top" Margin="0" HorizontalAlignment="Center">
                         <Label.Style>
                             <Style TargetType="Label">
                                 <Setter Property="Content" Value=""/>
@@ -125,18 +125,18 @@
                         </Label.Style>
                     </Label>
 
-                    <Button x:Name="ViewGradeButton" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Width="160" Height="50" 
+                    <Button x:Name="ViewGradeButton" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Width="170" Height="50" 
                             Click="ViewGradeButton_Click" IsEnabled="{Binding SelectedReservation.IsGradedByGuest}"
                             VerticalAlignment="Bottom" Margin="0,0,0,10"
                             Style="{StaticResource DisabledButtonStyle}">
-                        <StackPanel Orientation="Horizontal"  Margin="10,0,0,0">
+                        <StackPanel Orientation="Horizontal"  Margin="5,0,0,0">
                             <Image Source="{StaticResource EyeIconBeige}" Height="30" Width="30"/>
                             <Label Content="View grade" Style="{StaticResource ButtonLabel}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                         </StackPanel>
                     </Button>
 
-                    <ListView ItemsSource="{Binding ReservationCollection, UpdateSourceTrigger=PropertyChanged}"
-          SelectedItem="{Binding SelectedReservation, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center"
+                    <ListView ItemsSource="{Binding ReservationCollection, UpdateSourceTrigger=PropertyChanged}" FontFamily="{StaticResource Roboto}"
+          SelectedItem="{Binding SelectedReservation, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" FontSize="12"
           SelectionMode="Single" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" ScrollViewer.HorizontalScrollBarVisibility="Hidden">
                         <ListView.View>
                             <GridView>
@@ -158,6 +158,8 @@
                                 <Setter Property="HorizontalContentAlignment" Value="Center"/>
                                 <Setter Property="Foreground" Value="Black"/>
                                 <Setter Property="Background" Value="Transparent"/>
+                                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
+                                <Setter Property="FontSize" Value="12"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
                                         <Setter Property="Background" Value="{StaticResource Beige}"/>
@@ -173,7 +175,7 @@
                 </Grid>
             </TabItem>
 
-            <TabItem Header="Requests"  Width="120" Height="40" FontSize="12">
+            <TabItem Header="Requests"  Width="120" Height="40"  FontFamily="{StaticResource Roboto}" FontSize="16">
                 <Grid Background="#FFE5E5E5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="50"/>
@@ -188,20 +190,21 @@
                     <Button x:Name="Decline" Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0" Width="130" Height="50" Command="{Binding DeclineButtonCommand}" Style="{StaticResource DisabledButtonStyle}">
                         <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                             <Image Source="{StaticResource CancelIconBeige}" Height="30" Width="30"/>
-                            <Label Content="Decline" FontSize="14" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
+                            <Label Content="Decline" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
                         </StackPanel>
                     </Button>
 
                     <Button x:Name="Accept" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Width="130" Height="50" Command="{Binding AcceptButtonCommand}" Style="{StaticResource DisabledButtonStyle}">
                         <StackPanel Orientation="Horizontal"  Margin="10,0,0,0">
                             <Image Source="{StaticResource ConfirmIconBeige}" Height="30" Width="30"/>
-                            <Label Content="Accept" FontSize="14" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
+                            <Label Content="Accept" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource ButtonLabel}"/>
                         </StackPanel>
                     </Button>
 
                     <ListView x:Name="RequestsList" ItemsSource="{Binding RescheduleRequestDTOs, UpdateSourceTrigger=PropertyChanged}"
                         SelectedItem="{Binding SelectedRequest, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center"
                         SelectionMode="Single" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" SelectionChanged="RequestsList_SelectionChanged"
+                              FontFamily="{StaticResource Roboto}" FontSize="12"
                               ScrollViewer.HorizontalScrollBarVisibility="Hidden">
                         <ListView.View>
                             <GridView>
@@ -224,6 +227,8 @@
                                 <Setter Property="HorizontalContentAlignment" Value="Center"/>
                                 <Setter Property="Foreground" Value="Black"/>
                                 <Setter Property="Background" Value="Transparent"/>
+                                <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
+                                <Setter Property="FontSize" Value="12"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
                                         <Setter Property="Background" Value="{StaticResource Beige}"/>
