--- a/WPF/Android/Views/SideMenuPage.xaml
+++ b/WPF/Android/Views/SideMenuPage.xaml
@@ -11,14 +11,14 @@
     <Page.Resources>
         <Style x:Key="TextBlockBeige" TargetType="TextBlock">
             <Setter Property="Foreground" Value="{StaticResource Beige}"/>
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="FontFamily" Value="Global sans serif"/>
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
         </Style>
 
         <Style x:Key="LabelBeige" TargetType="Label">
             <Setter Property="Foreground" Value="{StaticResource Beige}"/>
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="FontFamily" Value="Global sans serif"/>
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="FontFamily" Value="{StaticResource Roboto}"/>
         </Style>
 
         <BitmapImage x:Key="RenovationIcon" UriSource="../../../Resources/Images/Icons/renovation-icon-beige.png"/>
@@ -43,15 +43,20 @@
         <Button Click="AccommodationsButton_Click" Grid.Row="0" Background="{StaticResource Green}">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Border BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
+                    <Border x:Name="border" BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                            <Image Source="{StaticResource HouseIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
+                            <Image Source="{StaticResource HouseIcon}"  Height="40" Width="40" Margin="10,0,0,0" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="10,0,0,0">
                                 <TextBlock Text="Accommodations"  HorizontalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
-                                <TextBlock Text="and Statistics" FontSize="16" FontFamily="Global Sans Serif" Style="{StaticResource TextBlockBeige}"/>
+                                <TextBlock Text="and Statistics" Style="{StaticResource TextBlockBeige}"/>
                             </StackPanel>
                         </StackPanel>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="border" Property="Background" Value="#5a8c6b"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Button.Template>
         </Button>
@@ -59,13 +64,18 @@
         <Button Click="InboxButton_Click" Grid.Row="1" Background="{StaticResource Green}">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Border BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
+                    <Border x:Name="border" BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                            <Image Source="{StaticResource InboxIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
+                            <Image Source="{StaticResource InboxIcon}"  Height="40" Width="40" Margin="10,0,0,0" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <TextBlock Text="Inbox"  Margin="10,0,0,0" VerticalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
                             <TextBlock Text="{Binding MessagesNumLabel}"  Margin="5,0,0,0" VerticalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
                         </StackPanel>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="border" Property="Background" Value="#5a8c6b"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Button.Template>
         </Button>
@@ -73,12 +83,17 @@
         <Button Click="ReservationsButton_Click" Grid.Row="2" Background="{StaticResource Green}">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Border BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
+                    <Border x:Name="ResBorder" BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                            <Image Source="{StaticResource CalendarBeigeIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
+                            <Image Source="{StaticResource CalendarBeigeIcon}"  Height="40" Width="40" Margin="10,0,0,0" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <TextBlock Text="Reservations" Margin="10,0,0,0" VerticalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
                         </StackPanel>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="ResBorder" Property="Background" Value="#5a8c6b"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Button.Template>
         </Button>
@@ -86,25 +101,35 @@
         <Button Click="RenovationsButton_Click" Grid.Row="3" Background="{StaticResource Green}">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Border BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
+                    <Border x:Name="RenovationBorder" BorderBrush="Black" BorderThickness="2,2,2,0" Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                            <Image Source="{StaticResource RenovationIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
+                            <Image Source="{StaticResource RenovationIcon}"  Height="40" Width="40" Margin="10,0,0,0" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <TextBlock Text="Renovations" Style="{StaticResource TextBlockBeige}" Margin="10,0,0,0" VerticalAlignment="Center"/>
                         </StackPanel>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="RenovationBorder" Property="Background" Value="#5a8c6b"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Button.Template>
         </Button>
 
-        <Button x:Name="ForumsButton"  Click="ForumsButton_Click" Grid.Row="4" Background="{StaticResource Green}">
+        <Button x:Name="ForumsButton"  Click="ForumsButton_Click" Grid.Row="4">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Border BorderBrush="Black" BorderThickness="2,2,2,2" Background="{TemplateBinding Background}">
+                    <Border x:Name="ForumsBorder" BorderBrush="Black" BorderThickness="2,2,2,2" Background="{StaticResource Green}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                            <Image Source="{StaticResource ForumsIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
+                            <Image Source="{StaticResource ForumsIcon}"  Height="40" Width="40" Margin="10,0,0,0" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <TextBlock Text="Forums" Margin="10,0,0,0" VerticalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
                         </StackPanel>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="ForumsBorder" Property="Background" Value="#5a8c6b"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Button.Template>
         </Button>
@@ -121,13 +146,15 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-                <Image Height="40" Width="40" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Source="../../../Resources/Images/Icons/owner-icon.png" Margin="-5,0,0,0"/>
+                <Image Height="40" Width="40" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Source="../../../Resources/Images/Icons/owner-icon.png" Margin="-5,0,0,0"
+                       RenderOptions.BitmapScalingMode="HighQuality"/>
                 <Label x:Name="UsernameLabel" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"
-                       FontWeight="Bold" VerticalAlignment="Top" Padding="0" Style="{StaticResource LabelBeige}"/>
+                       FontWeight="SemiBold" VerticalAlignment="Top" Padding="0" Style="{StaticResource LabelBeige}" Margin="5,0,0,0"/>
                 <Label Grid.Column="1" Grid.Row="1" VerticalAlignment="Top"
                        HorizontalAlignment="Left" Content="Average Grade:" Height="25" Padding="0" Style="{StaticResource LabelBeige}"/>
 
-                <Image x:Name="SuperImage" Grid.Column="0" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="20" Width="20" Margin="0,0,5,0"/>
+                <Image x:Name="SuperImage" Grid.Column="0" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right" Height="20" Width="20" Margin="0,0,5,0"
+                       RenderOptions.BitmapScalingMode="HighQuality"/>
                 <Label x:Name="AverageGradeLabel"  Grid.Column="2" Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Left" Height="25" Padding="0"
                        Style="{StaticResource LabelBeige}"/>
 
@@ -137,12 +164,17 @@
         <Button Click="LogOutButton_Click" Grid.Row="7" Background="{StaticResource Green}">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
-                    <Border BorderBrush="Black" BorderThickness="2,2,2,2" Background="{TemplateBinding Background}">
+                    <Border x:Name="LogBorder" BorderBrush="Black" BorderThickness="2,2,2,2" Background="{TemplateBinding Background}">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                            <Image Source="{StaticResource LogoutIcon}"  Height="40" Width="40" Margin="10,0,0,0"/>
+                            <Image Source="{StaticResource LogoutIcon}"  Height="40" Width="40" Margin="10,0,0,0" RenderOptions.BitmapScalingMode="HighQuality"/>
                             <TextBlock Text="Log out" Margin="10,0,0,0" VerticalAlignment="Center" Style="{StaticResource TextBlockBeige}"/>
                         </StackPanel>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="LogBorder" Property="Background" Value="#5a8c6b"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Button.Template>
         </Button>
