feat: Added comments view of specific forum
- Implemented views and view models for detailed view of forum
  where comments from guests and owners are shown

--- a/App.xaml
+++ b/App.xaml
@@ -62,6 +62,8 @@
         <BitmapImage x:Key="AddNewIcon" UriSource="Resources/Images/Icons/add-new-icon.png"/>
         <BitmapImage x:Key="CommentIcon" UriSource="Resources/Images/Icons/comment-icon.png"/>
         <BitmapImage x:Key="UserIcon" UriSource="Resources/Images/Icons/user-icon.png"/>
+        <BitmapImage x:Key="PlaneIcon" UriSource="Resources/Images/Icons/plane-icon.png"/>
+        <BitmapImage x:Key="OwnerIcon" UriSource="Resources/Images/owner-icon.png"/>
 
         <SolidColorBrush x:Key="HardGreen" Color="#12372A"/>
         <SolidColorBrush x:Key="Green" Color="#436850"/>
