--- a/WPF/Web/Views/CreateForumModalDialog.xaml
+++ b/WPF/Web/Views/CreateForumModalDialog.xaml
@@ -63,12 +63,12 @@
 
             <StackPanel Grid.Row="2" Margin="10 5 0 5">
                 <Label Content="Title" Style="{StaticResource LabelStyle}"/>
-                <TextBox Name="textBoxTitle" TextWrapping="Wrap" Width="400" Height="20" Margin="10 0 0 0" HorizontalAlignment="Left" TextChanged="TitleTextChanged"/>
+                <TextBox Name="textBoxTitle" TextWrapping="Wrap" Width="400" Height="28" Padding="5"  Margin="10 0 0 0" HorizontalAlignment="Left" TextChanged="TitleTextChanged"/>
             </StackPanel>
 
             <StackPanel Grid.Row="3" Margin="10 5 0 10">
                 <Label Content="Comment" Style="{StaticResource LabelStyle}"/>
-                <TextBox Name="textBoxComment" TextWrapping="Wrap" Width="400" Height="150" Margin="10 0 0 0" HorizontalAlignment="Left" TextChanged="TitleTextChanged"/>
+                <TextBox Name="textBoxComment" TextWrapping="Wrap" Width="400" Height="150" Margin="10 0 0 0" Padding="5" HorizontalAlignment="Left" TextChanged="TitleTextChanged"/>
             </StackPanel>
 
             <Button Name="buttonCancel" Grid.Row="4" Margin="10" HorizontalAlignment="Left" Click="ButtonCancelClick" Style="{StaticResource MainButton}">
